# stocknota

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.in  requirements_lock.txt
.devcontainer/: devcontainer.json  docker-compose.yml
projects/: BUILD.bazel  main.py
projects/app/: BUILD.bazel  __main__.py  asgi.py  run.py
projects/migrator/: BUILD.bazel  __main__.py  alembic.ini  env.py
